<resources>
    <string name="app_name">Login &amp; SignUP DEMO</string>

    <string name="Login">LOGIN</string>
    <string name="SignUP">SIGN UP</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="home">you are at HOme Acitvity</string>

</resources>
